--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -13,7 +13,7 @@ pipeline
         {
             steps
             {
-                sh 'echo Build'
+                sh 'echo Build again'
             }
         }
         stage('End to End Test')
