Build with Debug/Demo and Lint

--- a/Gadgeothek/app/build.gradle
+++ b/Gadgeothek/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
-
     defaultConfig {
         applicationId "ch.hsr.mge.gadgeothek"
         minSdkVersion 21
@@ -19,6 +22,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors
+            {
+                demo
+                        {
+                            applicationIdSuffix ".demo"
+                            versionNameSuffix "-demo"
+                        }
+                full
+                        {
+                            applicationIdSuffix ".full"
+                            versionNameSuffix "-full"
+                        }
+            }
     dexOptions {
         jumboMode true
     }
