--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -13,7 +13,8 @@ pipeline
         {
             steps
             {
-                sh 'echo Build again'
+                gradlew build
+                gradlew lint
             }
         }
         stage('End to End Test')
