--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -33,4 +33,11 @@ pipeline
             }
         }
     }
+    post
+    {
+        always
+        {
+            archiveArtifacts '**/outputs/*/*.apk'
+        }
+    }
 }
