--- a/Gadgeothek/build.gradle
+++ b/Gadgeothek/build.gradle
@@ -18,5 +18,10 @@ allprojects {
         maven {
             url 'http://dl.bintray.com/amulyakhare/maven'
         }
+        maven
+        {
+            url 'https://maven.google.com'
+            name 'Google'
+        }
     }
 }
