Added E2E Tests to Jenkins File

--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -22,7 +22,7 @@ pipeline
         {
             steps
             {
-                sh 'echo End to End Test'
+                sh '(cd Gadgeothek; ./gradlew connectedAndroidTest)'
             }
         }
         stage('Deployment')
