--- a/Gadgeothek/app/build.gradle
+++ b/Gadgeothek/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
 
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.0'
     androidTestCompile 'com.android.support.test:runner:1.0.0'
+    testCompile 'junit:junit:4.12'
 }
