--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -25,7 +25,15 @@ pipeline
             {
                 sh '(cd Gadgeothek; ./gradlew test)'
              }
+             post
+             {
+                always
+                {
+                    junit allowEmptyResults: true, testResults: '**/build/test-results/**/*.xml'
+                }
+             }
         }
+
         stage('End to End Test')
         {
             steps
@@ -46,7 +54,6 @@ pipeline
         always
         {
             archiveArtifacts '**/outputs/*/*.apk'
-            junit allowEmptyResults: true, testResults: '**/build/test-results/*/*.xml'
        }
         success
         {
