--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -29,8 +29,7 @@ pipeline
              {
                 always
                 {
-                    junit allowEmptyResults: true, testResults: '**/build/test-results/**/*.xml'
-
+                    junit allowEmptyResults: true, testResults: '**/test-results/**/*.xml
                 }
              }
         }
