--- a/Gadgeothek/JenkinsFile
+++ b/Gadgeothek/JenkinsFile
@@ -29,7 +29,7 @@ pipeline
              {
                 always
                 {
-                    junit allowEmptyResults: true, testResults: '**/test-results/**/*.xml
+                    junit allowEmptyResults: true, testResults: **/test-results/**/*.xml
                 }
              }
         }
