--- a/Gadgeothek/build.gradle
+++ b/Gadgeothek/build.gradle
@@ -3,10 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-
+        classpath 'gradle.plugin.ch.yvu.teststore:gradle-plugin:0.12'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,3 +29,16 @@ allprojects {
         }
     }
 }
+
+apply plugin: 'ch.yvu.teststore'
+
+teststore {
+    host 'test-store.testing-knowhow.ch'
+    port  8080
+    testSuite '4e64cd6e-2755-4282-8eb7-f5cbe5588967'
+    revision System.properties['revision']
+    xmlReports ~/.*\/test-results\/TEST-.*\.xml/
+    incremental false
+}
+
+
